<resources>
    <string name="app_name">MAD_Practical-4_22012011045</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="create_alarm_time">Create Alarm Time</string>
    <string name="by_pressing_button">By pressing button, Alarm can be created and cancelled.</string>
    <string name="check_current_time">Check Current time by locking below real digital clock.</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="alarm_image">Alarm Image</string>
</resources>